kubernetes/deploy/external/files/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: files
spec:
  ports:
  - protocol: TCP
    port: 8283
    name: http
    targetPort: 8283
