kubernetes/deploy/external/files/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: files
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`files.vandeneede.org`)
    services:
    - name: files
      port: 8283
